using a single image for all

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Ovo&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="./images/A-icons8-a-64.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/Profile.jpg" type="image/x-icon">
 
     <style>
         body::-webkit-scrollbar {
@@ -37,8 +37,7 @@
 <body class="overflow-x-hidden font-Outfit leading-8 dark:bg-darkTheme dark:text-white">
 
     <div class="fixed top-0 right-0 w-11/12 -z-10 translate-y-[-80%] dark:hidden">
-        <!-- <img src="./images/header-bg-color.png" class="w-full"> -->
-    </div>
+        </div>
 
     <nav class="w-full fixed px-5 lg:px-8 xl:px-[8%] py-4 flex items-center justify-between z-50">
         <h1><span class=" text-3xl">R</span>ahul <span class=" text-3xl">K</span>umar</h1>
@@ -53,20 +52,20 @@
         </ul>
         <div class="flex items-center gap-4">
             <button onclick="toggleTheme()">
-                <img src="./images/moon_icon.png" class="w-6 dark:hidden">
-                <img src="./images/sun_icon.png" class="w-6 hidden dark:block">
+                <img src="./images/Profile.jpg" class="w-6 dark:hidden">
+                <img src="./images/Profile.jpg" class="w-6 hidden dark:block">
             </button>
 
             <a href="#contact"
                 class="hidden lg:flex items-center gap-3 px-10 py-2.5 border border-gray-500 rounded-full m1-4 font-Ovo dark:border-white/50">
                 Contact
-                <img src="./images/arrow-icon.png" class="w-3 dark:hidden">
-                <img src="./images/arrow-icon-dark.png" class="w-3 hidden dark:block">
+                <img src="./images/Profile.jpg" class="w-3 dark:hidden">
+                <img src="./images/Profile.jpg" class="w-3 hidden dark:block">
             </a>
 
             <button class="block md:hidden ml-3" onclick="openmenu()">
-                <img src="./images/menu-black.png" class="w-6 dark:hidden">
-                <img src="./images/menu-white.png" class="w-6 hidden dark:block">
+                <img src="./images/Profile.jpg" class="w-6 dark:hidden">
+                <img src="./images/Profile.jpg" class="w-6 hidden dark:block">
             </button>
 
         </div>
@@ -75,8 +74,8 @@
             class="flex md:hidden flex-col gap-4 py-20 px-10 fixed -right-64 top-0 bottom-0 w-64 z-50 h-screen bg-rose-50 transition duration-500 font-Ovo dark:bg-darkHover dark:text-white">
 
             <div class="absolute right-6 top-6" onclick="closemenu()">
-                <img src="./images/close-black.png" class="w-5 cursor-pointer dark:hidden">
-                <img src="./images/close-white.png" class="w-5 cursor-pointer hidden dark:block">
+                <img src="./images/Profile.jpg" class="w-5 cursor-pointer dark:hidden">
+                <img src="./images/Profile.jpg" class="w-5 cursor-pointer hidden dark:block">
             </div>
 
             <li><a href="index.html#top" onclick="closemenu()">Home</a></li>
@@ -94,30 +93,30 @@
 
         <div class="flex flex-col md:flex-row items-center justify-center gap-10 w-full mb-12">
             <div class="flex flex-col items-center text-center p-6 border rounded-lg shadow-sm dark:border-white/50 dark:bg-darkHover/30">
-                <img src="./images/mail_icon_dark.png" class="w-10 mb-4 dark:block hidden">
-                <img src="./images/mail_icon.png" class="w-10 mb-4 dark:hidden">
+                <img src="./images/Profile.jpg" class="w-10 mb-4 dark:block hidden">
+                <img src="./images/Profile.jpg" class="w-10 mb-4 dark:hidden">
                 <h3 class="text-xl font-semibold mb-2">Email</h3>
                 <a href="mailto:rahulkumar.photo@example.com" class="text-blue-500 hover:underline">rahulkumar.photo@example.com</a>
             </div>
 
             <div class="flex flex-col items-center text-center p-6 border rounded-lg shadow-sm dark:border-white/50 dark:bg-darkHover/30">
-                <img src="./images/logo_p.png" class="w-10 mb-4 dark:block hidden">
-                <img src="./images/logo_p.png" class="w-10 mb-4 dark:hidden">
+                <img src="./images/Profile.jpg" class="w-10 mb-4 dark:block hidden">
+                <img src="./images/Profile.jpg" class="w-10 mb-4 dark:hidden">
                 <h3 class="text-xl font-semibold mb-2">Phone</h3>
                 <a href="tel:+919876543210" class="text-blue-500 hover:underline">+91 98765 43210</a>
                 <a href="https://wa.me/919876543210" target="_blank" class="text-green-500 hover:underline mt-2 flex items-center gap-1">
-                    <img src="./images/hand-icon copy 4.png" class="w-5"> WhatsApp
+                    <img src="./images/Profile.jpg" class="w-5"> WhatsApp
                 </a>
             </div>
 
             <div class="flex flex-col items-center text-center p-6 border rounded-lg shadow-sm dark:border-white/50 dark:bg-darkHover/30">
-                <img src="./images/mail_icon.png" class="w-10 mb-4 dark:block hidden">
-                <img src="./images/mail_icon.png" class="w-10 mb-4 dark:hidden">
+                <img src="./images/Profile.jpg" class="w-10 mb-4 dark:block hidden">
+                <img src="./images/Profile.jpg" class="w-10 mb-4 dark:hidden">
                 <h3 class="text-xl font-semibold mb-2">Address</h3>
                 <p class="text-gray-600 dark:text-white/80">3, behind Lucky Kirana Shop,</p>
                 <p class="text-gray-600 dark:text-white/80">Marathi Mohalla, Ahilya Paltan,</p>
                 <p class="text-gray-600 dark:text-white/80">Indore, Madhya Pradesh 452006, India</p>
-                <a href="https://maps.app.goo.gl/YourActualGoogleMapsLink" target="_blank" class="text-blue-500 hover:underline mt-2">View on Map</a>
+                <a href="https://maps.google.com/0" target="_blank" class="text-blue-500 hover:underline mt-2">View on Map</a>
             </div>
         </div>
 
@@ -141,19 +140,19 @@
             <button
                 class="py-3 px-8 w-max flex items-center justify-between gap-2 bg-black/80 text-white rounded-full mx-auto hover:bg-black duration-500 dark:bg-transparent dark:border-[0.5px] dark:hover:bg-darkHover">Send
                 Message
-                <img src="./images/right-arrow-white.png" alt="" class="w-4">
+                <img src="./images/Profile.jpg" alt="" class="w-4">
             </button>
         </form>
     </div>
 
     <div class="mt-20">
         <div class="text-center">
-            <img src="./images/port_logo.png" alt="" class="w-36 mx-auto mb-2 dark:hidden">
-            <img src="./images/port_logo_dark.png" alt="" class="w-36 mx-auto mb-2 hidden dark:block">
+            <img src="./images/Profile.jpg" alt="" class="w-36 mx-auto mb-2 dark:hidden">
+            <img src="./images/Profile.jpg" alt="" class="w-36 mx-auto mb-2 hidden dark:block">
 
             <div class="w-max flex items-center gap-2 mx-auto">
-                <img src="./images/mail_icon.png" alt="" class="w-6 dark:hidden">
-                <img src="./images/download-icon.png" alt="" class="w-6 hidden dark:block">
+                <img src="./images/Profile.jpg" alt="" class="w-6 dark:hidden">
+                <img src="./images/Profile.jpg" alt="" class="w-6 hidden dark:block">
                 rahulkumar.photo@example.com
             </div>
         </div>
@@ -161,10 +160,10 @@
         <div class="text-center sm:flex items-center justify-between border-t border-gray-400 mx-[10%] mt-12 py-6">
             <p>2024 © Rahul Kumar - All Rights Reserved.</p>
             <ul class="flex items-center gap-10 justify-center mt-4 sm:mt-0">
-                <li><a href="https://www.instagram.com/official_anam_ali/" target="_blank">Instagram</a></li>
-                <li><a href="https://github.com/anamuddinahmad" target="_blank">Github</a></li>
-                <li><a href="https://www.linkedin.com/in/anamuddinahmad" target="_blank">Linkedin</a></li>
-                <li><a href="https://leetcode.com/u/anamuddinahmad/" target="_blank">LeetCode</a></li>
+                <li><a href="#" target="_blank">Instagram</a></li>
+                <li><a href="#" target="_blank">Github</a></li>
+                <li><a href="#" target="_blank">Linkedin</a></li>
+                <li><a href="#" target="_blank">LeetCode</a></li>
             </ul>
         </div>
     </div>
