button images correction

--- a/contact.html
+++ b/contact.html
@@ -52,15 +52,15 @@
         </ul>
         <div class="flex items-center gap-4">
             <button onclick="toggleTheme()">
-                <img src="./images/Profile.jpg" class="w-6 dark:hidden">
-                <img src="./images/Profile.jpg" class="w-6 hidden dark:block">
+                <img src="./images/moon_icon.png" class="w-6 dark:hidden">
+                <img src="./images/sun_icon.png" class="w-6 hidden dark:block">
             </button>
 
-            <a href="#contact"
+            <a href="contact.html"
                 class="hidden lg:flex items-center gap-3 px-10 py-2.5 border border-gray-500 rounded-full m1-4 font-Ovo dark:border-white/50">
                 Contact
-                <img src="./images/Profile.jpg" class="w-3 dark:hidden">
-                <img src="./images/Profile.jpg" class="w-3 hidden dark:block">
+                <img src="./images/arrow-icon.png" class="w-3 dark:hidden">
+                <img src="./images/arrow-icon-dark.png" class="w-3 hidden dark:block">
             </a>
 
             <button class="block md:hidden ml-3" onclick="openmenu()">
@@ -140,7 +140,7 @@
             <button
                 class="py-3 px-8 w-max flex items-center justify-between gap-2 bg-black/80 text-white rounded-full mx-auto hover:bg-black duration-500 dark:bg-transparent dark:border-[0.5px] dark:hover:bg-darkHover">Send
                 Message
-                <img src="./images/Profile.jpg" alt="" class="w-4">
+                <img src="./images/arrow-icon-dark.png" alt="" class="w-4">
             </button>
         </form>
     </div>
@@ -151,8 +151,8 @@
             <img src="./images/Profile.jpg" alt="" class="w-36 mx-auto mb-2 hidden dark:block">
 
             <div class="w-max flex items-center gap-2 mx-auto">
-                <img src="./images/Profile.jpg" alt="" class="w-6 dark:hidden">
-                <img src="./images/Profile.jpg" alt="" class="w-6 hidden dark:block">
+                <img src="./images/arrow-icon.png" alt="" class="w-6 dark:hidden">
+                <img src="./images/arrow-icon-dark.png" alt="" class="w-6 hidden dark:block">
                 rahulkumar.photo@example.com
             </div>
         </div>
@@ -161,9 +161,9 @@
             <p>2024 © Rahul Kumar - All Rights Reserved.</p>
             <ul class="flex items-center gap-10 justify-center mt-4 sm:mt-0">
                 <li><a href="#" target="_blank">Instagram</a></li>
-                <li><a href="#" target="_blank">Github</a></li>
-                <li><a href="#" target="_blank">Linkedin</a></li>
-                <li><a href="#" target="_blank">LeetCode</a></li>
+                <li><a href="#" target="_blank">studio</a></li>
+                <li><a href="#" target="_blank">videos</a></li>
+                <li><a href="#" target="_blank">photos</a></li>
             </ul>
         </div>
     </div>
