--- a/gallery.html
+++ b/gallery.html
@@ -49,24 +49,25 @@
     <li><a href="gallery.html">My Gallery</a></li>
     <li><a href="contact.html">Connect</a></li>
    </ul>
-   <div class="flex items-center gap-4">
-    <button onclick="toggleTheme()">
-     <img src="./images/moon_icon.png" class="w-6 dark:hidden">
-     <img src="./images/sun_icon.png" class="w-6 hidden dark:block">
-    </button>
+        <div class="flex items-center gap-4">
+            <button onclick="toggleTheme()">
+                <img src="./images/moon_icon.png" class="w-6 dark:hidden">
+                <img src="./images/sun_icon.png" class="w-6 hidden dark:block">
+            </button>
 
-    <a href="contact.html" class="hidden lg:flex items-center gap-3 px-10 py-2.5 border border-gray-500 rounded-full m1-4 font-Ovo dark:border-white/50">
-     Contact
-     <img src="./images/arrow-icon.png" class="w-3 dark:hidden">
-     <img src="./images/arrow-icon-dark.png" class="w-3 hidden dark:block">
-    </a>
+            <a href="contact.html"
+                class="hidden lg:flex items-center gap-3 px-10 py-2.5 border border-gray-500 rounded-full m1-4 font-Ovo dark:border-white/50">
+                Contact
+                <img src="./images/arrow-icon.png" class="w-3 dark:hidden">
+                <img src="./images/arrow-icon-dark.png" class="w-3 hidden dark:block">
+            </a>
 
-    <button class="block md:hidden ml-3" onclick="openmenu()">
-     <img src="./images/menu-black.png" class="w-6 dark:hidden">
-     <img src="./images/menu-white.png" class="w-6 hidden dark:block">
-    </button>
+            <button class="block md:hidden ml-3" onclick="openmenu()">
+                <img src="./images/Profile.jpg" class="w-6 dark:hidden">
+                <img src="./images/Profile.jpg" class="w-6 hidden dark:block">
+            </button>
 
-   </div>
+        </div>
 
    <ul id="sideMenu" class="flex md:hidden flex-col gap-4 py-20 px-10 fixed -right-64 top-0 bottom-0 w-64 z-50 h-screen bg-rose-50 transition duration-500 font-Ovo dark:bg-darkHover dark:text-white">
 
@@ -148,12 +149,12 @@
 
    <div class="text-center sm:flex items-center justify-between border-t border-gray-400 mx-[10%] mt-12 py-6">
     <p>2024 © Rahul Kumar - All Rights Reserved.</p>
-    <ul class="flex items-center gap-10 justify-center mt-4 sm:mt-0">
-     <li><a href="#" target="_blank">Instagram</a></li>
-     <li><a href="#" target="_blank">Github</a></li>
-     <li><a href="#" target="_blank">Linkedin</a></li>
-     <li><a href="#" target="_blank">LeetCode</a></li>
-    </ul>
+           <ul class="flex items-center gap-10 justify-center mt-4 sm:mt-0">
+                <li><a href="#" target="_blank">Instagram</a></li>
+                <li><a href="#" target="_blank">studio</a></li>
+                <li><a href="#" target="_blank">videos</a></li>
+                <li><a href="#" target="_blank">photos</a></li>
+            </ul>
    </div>
   </div>
   <script src="./script.js"></script>
