--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
         </ul>
         <div class="flex items-center gap-4">
             <button onclick="toggleTheme()">
-                <img src="./images/Profile.jpg" class="w-6 dark:hidden">
-                <img src="./images/Profile.jpg" class="w-6 hidden dark:block">
+                <img src="./images/moon_icon.png" class="w-6 dark:hidden">
+                <img src="./images/sun_icon.png" class="w-6 hidden dark:block">
             </button>
 
             <a href="contact.html"
                 class="hidden lg:flex items-center gap-3 px-10 py-2.5 border border-gray-500 rounded-full m1-4 font-Ovo dark:border-white/50">
                 Contact
-                <img src="./images/Profile.jpg" class="w-3 dark:hidden">
-                <img src="./images/Profile.jpg" class="w-3 hidden dark:block">
+                <img src="./images/arrow-icon.png" class="w-3 dark:hidden">
+                <img src="./images/arrow-icon-dark.png" class="w-3 hidden dark:block">
             </a>
 
             <button class="block md:hidden ml-3" onclick="openmenu()">
@@ -89,7 +89,7 @@
 
         <img src="./images/Profile.jpg" class="rounded-md w-32 mt-28">
         <h3 class="flex items-end gap-2 text-xml md:text-2xl mb-3 font-Ovo">Namaste! I'm<img
-                src="./images/Profile.jpg" class="w-6"></h3>
+                src="./images/hand-icon.png" class="w-6"></h3>
         <h1 class="text-3xl sm:text-6xl lg:text-[66px] font-Ovo">Capturing India's Soul Through My Lens</h1>
         <p class="max-w-2xl mx-auto font-Ovo">Welcome to my visual diary! I'm a passionate Indian photographer, dedicated
             to preserving the vibrant colors, rich traditions, and candid moments of life across India. Come, explore my
@@ -100,13 +100,13 @@
     <a href="contact.html"
         class="px-10 py-3 border rounded-full bg-gradient-to-r from-[#b820e6] to-[#da7d20] text-white flex items-center gap-2 dark:border-transparent">
         Book a Session
-        <img src="./images/Profile.jpg" class="w-4">
+        <img src="./images/arrow-icon-dark.png" class="w-4">
     </a>
 
     <a href="gallery.html"
         class="px-10 py-3 border rounded-full border-gray-500 flex items-center gap-2 bg-white dark:text-black">
         See Gallery
-        <img src="./images/Profile.jpg" class="w-4">
+        <img src="./images/arrow-icon.png" class="w-4">
     </a>
 </div>
 
@@ -242,7 +242,7 @@
                 <p class="texxt-sm text-gray-600 leading-5 dark:text-white/80">Capturing every precious moment of your
                     special day, with an Indian touch...</p>
                 <a href="contact.html" class="flex items-center gap-2 text-sm mt-5">Book Now <img
-                        src="./images/Profile.jpg" alt="" class="w-4"></a> </div>
+                        src="./images/arrow-icon.png" alt="" class="w-4"></a> </div>
 
             <div
                 class="border border-gray-400 rounded-lg px-8 py-12 hover:shadow-black cursor-pointer hover:bg-lightHover hover:-translate-y-1 duration-500 dark:hover:bg-darkHover dark:hover:shadow-white">
@@ -250,7 +250,7 @@
                 <h3 class="text-lg my-4 text-gray-700 dark:text-white">Portrait & Lifestyle</h3>
                 <p class="texxt-sm text-gray-600 leading-5 dark:text-white/80">Crafting stunning portraits that tell your
                     unique story...</p>
-                <a href="contact.html" class="flex items-center gap-2 text-sm mt-5">View Gallery <img src="./images/Profile.jpg"
+                <a href="contact.html" class="flex items-center gap-2 text-sm mt-5">View Gallery <img src="./images/arrow-icon.png"
                         alt="" class="w-4"></a> </div>
             <div
                 class="border border-gray-400 rounded-lg px-8 py-12 hover:shadow-black cursor-pointer hover:bg-lightHover hover:-translate-y-1 duration-500 dark:hover:bg-darkHover dark:hover:shadow-white">
@@ -259,7 +259,7 @@
                 <p class="texxt-sm text-gray-600 leading-5 dark:text-white/80">Comprehensive coverage for all your
                     corporate and personal events...</p>
                 <a href="contact.html" class="flex items-center gap-2 text-sm mt-5">Inquire Now <img
-                        src="./images/Profile.jpg" alt="" class="w-4"></a> </div>
+                        src="./images/arrow-icon.png" alt="" class="w-4"></a> </div>
         </div>
     </div>
 
@@ -353,7 +353,7 @@
         <a href="contact.html"
             class="py-3 px-8 w-max flex items-center justify-between gap-2 bg-black/80 text-white rounded-full mx-auto hover:bg-black duration-500 dark:bg-transparent dark:border-[0.5px] dark:hover:bg-darkHover">Go
             To Contact Page
-            <img src="./images/Profile.jpg" alt="" class="w-4">
+            <img src="./images/arrow-icon.png" alt="" class="w-4">
         </a>
     </div>
 
@@ -363,19 +363,19 @@
             <img src="./images/Profile.jpg" alt="" class="w-36 mx-auto mb-2 hidden dark:block">
 
             <div class="w-max flex items-center gap-2 mx-auto">
-                <img src="./images/Profile.jpg" alt="" class="w-6 dark:hidden">
-                <img src="./images/Profile.jpg" alt="" class="w-6 hidden dark:block">
+                <img src="./images/arrow-icon.png" alt="" class="w-6 dark:hidden">
+                <img src="./images/arrow-icon-dark.png" alt="" class="w-6 hidden dark:block">
                 rahulkumar.photo@example.com
             </div>
         </div>
 
         <div class="text-center sm:flex items-center justify-between border-t border-gray-400 mx-[10%] mt-12 py-6">
             <p>2024 © Rahul Kumar - All Rights Reserved.</p>
-            <ul class="flex items-center gap-10 justify-center mt-4 sm:mt-0">
+           <ul class="flex items-center gap-10 justify-center mt-4 sm:mt-0">
                 <li><a href="#" target="_blank">Instagram</a></li>
-                <li><a href="#" target="_blank">Github</a></li>
-                <li><a href="#" target="_blank">Linkedin</a></li>
-                <li><a href="#" target="_blank">LeetCode</a></li>
+                <li><a href="#" target="_blank">studio</a></li>
+                <li><a href="#" target="_blank">videos</a></li>
+                <li><a href="#" target="_blank">photos</a></li>
             </ul>
         </div>
     </div>
